Add touch-action manipulation to tappable controls

--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
         font: inherit;
       }
 
+      button,
+      .key,
+      .arrow,
+      .sheet-title,
+      .cell-input,
+      .formula-input,
+      .const-cell input,
+      select {
+        touch-action: manipulation;
+      }
+
       .nav {
         position: fixed;
         top: env(safe-area-inset-top);
