--- a/index.html
+++ b/index.html
@@ -259,7 +259,6 @@
       td {
         border-right: 1px solid var(--line);
         border-bottom: 1px solid var(--line);
-        height: 48px;
         background: #f1f1f3;
       }
 
@@ -272,16 +271,29 @@
         position: sticky;
         top: 0;
         z-index: 7;
+        height: 48px;
+      }
+
+      tbody td {
+        height: 24px;
       }
 
       .num-head,
       .num {
-        text-align: center;
         position: sticky;
         left: 0;
         background: #f1f1f3;
         z-index: 8;
         font-size: 15px;
+      }
+
+      .num-head {
+        text-align: center;
+      }
+
+      .num {
+        text-align: right;
+        padding-right: 6px;
       }
 
       .num-head {
