--- a/index.html
+++ b/index.html
@@ -332,6 +332,11 @@
         z-index: 6;
       }
 
+      .result-cell {
+        text-align: right;
+        padding-right: 8px;
+      }
+
       .result-head { z-index: 9; }
 
       tfoot td {
@@ -429,6 +434,7 @@
         border: 0;
         background: transparent;
         padding: 0 8px;
+        text-align: right;
         font-size: 15px;
       }
 
