Strengthen sticky tfoot divider

--- a/index.html
+++ b/index.html
@@ -344,8 +344,13 @@
         bottom: 0;
         z-index: 10;
         background: var(--panel);
+        border-top: 2px solid #a4acb8;
         padding: 4px;
         height: 58px;
+      }
+
+      tfoot {
+        box-shadow: inset 0 2px 0 #a4acb8;
       }
 
       tfoot .num {
