Adjust footer stat value alignment and emphasis

--- a/index.html
+++ b/index.html
@@ -386,10 +386,13 @@
         height: 22px;
         display: grid;
         align-items: center;
+        justify-items: end;
+        text-align: right;
         border: 0;
         background: transparent;
         color: #596275;
-        font-size: 13px;
+        font-size: 15px;
+        font-weight: 700;
       }
 
       .keypad {
