--- a/index.html
+++ b/index.html
@@ -386,10 +386,13 @@
         height: 22px;
         display: grid;
         align-items: center;
+        justify-items: end;
+        text-align: right;
         border: 0;
         background: transparent;
         color: #596275;
-        font-size: 13px;
+        font-size: 15px;
+        font-weight: 700;
       }
 
       .keypad {
@@ -427,8 +430,18 @@
         border: 1px solid transparent;
       }
 
-      .key.enter {
-        background: #7f88a0;
+
+      .key.is-inactive,
+      .key.light.is-inactive {
+        background: #7082a7;
+        color: #d8deea;
+        border-color: transparent;
+      }
+
+      .key-active.is-inactive {
+        background: var(--panel);
+        color: #8a94a8;
+        border-color: transparent;
       }
 
       .keypad.minimized {
@@ -606,6 +619,8 @@
         const dataRows = [...document.querySelectorAll('tbody tr')];
         const statCells = [...document.querySelectorAll('tfoot .stat-cell')];
         const headerPills = [...document.querySelectorAll('thead .head-pill')];
+        const getKeyLabel = (key) => key?.textContent.trim() || '';
+        const NUMBER_ENTRY_KEY_LABELS = new Set(['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '.', '−', '↺', '⌫', '=', '↕']);
 
         const asyncStorage = {
           async get() {
@@ -669,6 +684,19 @@
 
         const cellInputs = [...document.querySelectorAll('.cell-input')];
         const rowBindings = dataRows.map((row) => ({ inputs: [...row.querySelectorAll('.cell-input')], resultCell: row.querySelector('.result-cell') }));
+        const numberEntryTargets = new Set([...constantInputs, ...cellInputs]);
+        const isNumberEntryContext = () => !!activeTarget && numberEntryTargets.has(activeTarget);
+        const isKeyEnabled = (key) => !isNumberEntryContext() || NUMBER_ENTRY_KEY_LABELS.has(getKeyLabel(key));
+        const updateKeyAvailability = () => {
+          keys.forEach((key) => {
+            const enabled = isKeyEnabled(key);
+            key.classList.toggle('is-inactive', !enabled);
+            key.setAttribute('aria-disabled', enabled ? 'false' : 'true');
+          });
+          const clearEnabled = isNumberEntryContext();
+          clearButton?.classList.toggle('is-inactive', !clearEnabled);
+          clearButton?.setAttribute('aria-disabled', clearEnabled ? 'false' : 'true');
+        };
         const headerNameEls = headerPills.slice(0, 4).map((pill) => pill.querySelector('.name'));
         const headerLetterEls = headerPills.slice(0, 4).map((pill) => pill.querySelector('.letter'));
         const constNameEls = constTopEls.map((pill) => pill.querySelector('.name'));
@@ -731,8 +759,8 @@
           const selection = window.getSelection(); selection.removeAllRanges(); selection.addRange(range);
         };
 
-        const activateTarget = (target) => { if (!target || activeTarget === target) return; if (activeTarget) activeTarget.classList.remove('is-active-target'); activeTarget = target; target.classList.add('is-active-target'); if (isInput(target) && document.activeElement !== target) target.focus({ preventScroll: true }); initialValueOnFocus = getText(target); };
-        const blurActiveTarget = () => { if (!activeTarget) return; activeTarget.classList.remove('is-active-target'); if (document.activeElement instanceof HTMLElement) document.activeElement.blur(); activeTarget = null; };
+        const activateTarget = (target) => { if (!target || activeTarget === target) return; if (activeTarget) activeTarget.classList.remove('is-active-target'); activeTarget = target; target.classList.add('is-active-target'); if (isInput(target) && document.activeElement !== target) target.focus({ preventScroll: true }); initialValueOnFocus = getText(target); updateKeyAvailability(); };
+        const blurActiveTarget = () => { if (!activeTarget) return; activeTarget.classList.remove('is-active-target'); if (document.activeElement instanceof HTMLElement) document.activeElement.blur(); activeTarget = null; updateKeyAvailability(); };
         const insertIntoTarget = (text) => { if (!activeTarget) return; const value = getText(activeTarget); const { start, end } = getSelection(activeTarget); setText(activeTarget, value.slice(0, start) + text + value.slice(end)); setSelection(activeTarget, start + text.length); resetClearStage(); };
         const deleteBackward = () => { if (!activeTarget) return; const value = getText(activeTarget); const { start, end } = getSelection(activeTarget); if (start !== end) { setText(activeTarget, value.slice(0, start) + value.slice(end)); setSelection(activeTarget, start); } else if (start > 0) { setText(activeTarget, value.slice(0, start - 1) + value.slice(start)); setSelection(activeTarget, start - 1); } resetClearStage(); };
         const moveCursor = (delta) => { if (!activeTarget) return; const { start, end } = getSelection(activeTarget); const base = delta < 0 ? start : end; setSelection(activeTarget, Math.max(0, Math.min(base + delta, getText(activeTarget).length))); };
@@ -772,6 +800,7 @@
           rowBindings.forEach((row, ri) => { KEY_ORDER.forEach((key, ci) => { row.inputs[ci].value = sheet.rows[ri][key] || ''; }); row.resultCell.textContent = sheet.rows[ri].Result || ''; });
           statCells.forEach((cell, idx) => { const select = cell.querySelector('select'); if (select) select.value = sheet.stats[idx] || '--'; });
           recomputeStatsFromSheet(sheet);
+          updateKeyAvailability();
         };
 
         const computeAllRows = () => {
@@ -815,7 +844,8 @@
         titleFields.forEach((target) => { ['focus', 'pointerup', 'click'].forEach((eventName) => target.addEventListener(eventName, () => activateTarget(target))); target.addEventListener('input', () => { resetClearStage(); persistFromDom(); }); });
 
         const handleKeyPress = (key) => {
-          const label = key.textContent.trim();
+          const label = getKeyLabel(key);
+          if (!isKeyEnabled(key)) return;
           if (key === minimizeKey) {
             const isMinimized = keypad.classList.toggle('minimized');
             document.body.classList.toggle('keypad-is-minimized', isMinimized);
@@ -854,14 +884,14 @@
         bindSheetArrow(sheetNavButtons[1], 1);
 
         toggleButton?.addEventListener('click', () => { persistFromDom(); state.formulaMode = state.formulaMode === 'letter' ? 'name' : 'letter'; renderSheet(); scheduleSave(); resetClearStage(); });
-        clearButton?.addEventListener('click', (event) => { event.preventDefault(); clearAction(); });
+        clearButton?.addEventListener('click', (event) => { event.preventDefault(); if (clearButton?.getAttribute('aria-disabled') === 'true') return; clearAction(); });
         if (resultHeaderTrigger) {
           let pointer = false;
           resultHeaderTrigger.addEventListener('pointerdown', (event) => { event.preventDefault(); pointer = true; blurActiveTarget(); computeAllRows(); resetClearStage(); });
           resultHeaderTrigger.addEventListener('click', (event) => { event.preventDefault(); if (pointer) { pointer = false; return; } blurActiveTarget(); computeAllRows(); resetClearStage(); });
           resultHeaderTrigger.addEventListener('keydown', (event) => { if (!['Enter', ' '].includes(event.key)) return; event.preventDefault(); blurActiveTarget(); computeAllRows(); resetClearStage(); });
         }
-        editableTargets.forEach((target) => target.addEventListener('blur', () => { if (activeTarget === target) { target.classList.remove('is-active-target'); activeTarget = null; } persistFromDom(); }));
+        editableTargets.forEach((target) => target.addEventListener('blur', () => { if (activeTarget === target) { target.classList.remove('is-active-target'); activeTarget = null; updateKeyAvailability(); } persistFromDom(); }));
         statCells.forEach((cell, idx) => { const select = cell.querySelector('select'); select?.addEventListener('change', () => { state.sheets[state.currentSheetIndex].stats[idx] = select.value; scheduleSave(); resetClearStage(); }); });
         document.addEventListener('keydown', (event) => { if (event.key !== 'Enter') return; if (!activeTarget || !editableTargets.includes(activeTarget)) return; event.preventDefault(); blurActiveTarget(); computeAllRows(); resetClearStage(); });
 
@@ -875,6 +905,7 @@
           while (state.sheets.length < 2) state.sheets.push(makeSheet(state.sheets.length));
           renderSheet();
           resetClearStage();
+          updateKeyAvailability();
         })();
       })();
     </script>
