--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
         const headerPills = [...document.querySelectorAll('thead .head-pill')];
         const getKeyLabel = (key) => key?.textContent.trim() || '';
         const NUMBER_ENTRY_KEY_LABELS = new Set(['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '.', '−', '↺', '⌫', '=', '↕']);
-        const FORMULA_ENTRY_KEY_LABELS = new Set(['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '.', '−', '+', '*', '/', '^', '(', ')', ',', ':', '⌫', '↺', '↕', '⌨︎']);
+        const FORMULA_ENTRY_KEY_LABELS = new Set(['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '.', '−', '+', '*', '/', '^', '(', ')', ',', ':', '√', '⌫', '↺', '↕', '⌨︎']);
 
         const asyncStorage = {
           async get() {
@@ -922,7 +922,11 @@
           if (key === rightKey) return moveCursor(1);
           if (key === resultKey) { blurActiveTarget(); computeAllRows(); resetClearStage(); return; }
           if (label === '⌨︎') return;
-          insertIntoTarget(label === '−' ? '-' : label);
+          if (label === '√') {
+            insertIntoTarget('√(');
+          } else {
+            insertIntoTarget(label === '−' ? '-' : label);
+          }
           persistFromDom();
         };
 
