Fix AC reset defaults and preserve formulas during #C

--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
             key.setAttribute('aria-disabled', enabled ? 'false' : 'true');
           });
           document.body.classList.toggle('formula-entry-active', isFormulaEntryContext());
-          const clearEnabled = !!activeTarget || state.clearStage > 0;
+          const clearEnabled = true;
           clearButton?.classList.toggle('is-inactive', !clearEnabled);
           clearButton?.setAttribute('aria-disabled', clearEnabled ? 'false' : 'true');
         };
@@ -858,7 +858,7 @@
           const selection = window.getSelection(); selection.removeAllRanges(); selection.addRange(range);
         };
 
-        const activateTarget = (target) => { if (!target || activeTarget === target) return; if (activeTarget) activeTarget.classList.remove('is-active-target'); activeTarget = target; target.classList.add('is-active-target'); if (isInput(target) && document.activeElement !== target) target.focus({ preventScroll: true }); initialValueOnFocus = getText(target); updateKeyAvailability(); };
+        const activateTarget = (target) => { if (!target || activeTarget === target) return; if (activeTarget) activeTarget.classList.remove('is-active-target'); activeTarget = target; target.classList.add('is-active-target'); if (isInput(target) && document.activeElement !== target) target.focus({ preventScroll: true }); initialValueOnFocus = getText(target); resetClearStage(); updateKeyAvailability(); };
         const blurActiveTarget = () => { if (!activeTarget) return; activeTarget.classList.remove('is-active-target'); if (document.activeElement instanceof HTMLElement) document.activeElement.blur(); activeTarget = null; updateKeyAvailability(); };
         const insertIntoTarget = (text) => { if (!activeTarget) return; const value = getText(activeTarget); const { start, end } = getSelection(activeTarget); setText(activeTarget, value.slice(0, start) + text + value.slice(end)); setSelection(activeTarget, start + text.length); resetClearStage(); };
         const deleteBackward = () => { if (!activeTarget) return; const value = getText(activeTarget); const { start, end } = getSelection(activeTarget); if (start !== end) { setText(activeTarget, value.slice(0, start) + value.slice(end)); setSelection(activeTarget, start); } else if (start > 0) { setText(activeTarget, value.slice(0, start - 1) + value.slice(start)); setSelection(activeTarget, start - 1); } resetClearStage(); };
@@ -931,9 +931,9 @@
           persistFromDom();
           const sheet = state.sheets[state.currentSheetIndex];
           if (state.clearStage === 0) {
-            if (!activeTarget) return;
-            if (!getText(activeTarget)) return;
-            setText(activeTarget, '');
+            if (activeTarget && numberEntryTargets.has(activeTarget) && getText(activeTarget)) {
+              setText(activeTarget, '');
+            }
             setClearStage(1);
             persistFromDom();
             return;
@@ -954,8 +954,8 @@
           }
           if (state.clearStage === 3) {
             if (state.acConfirmPresses === 0) {
-              state.sheets[state.currentSheetIndex] = makeSheet(state.currentSheetIndex);
               blurActiveTarget();
+              state.sheets[state.currentSheetIndex] = makeSheet(state.currentSheetIndex);
               renderSheet();
               scheduleSave();
             }
@@ -963,9 +963,9 @@
             if (state.acConfirmPresses >= 4) setClearStage(4);
             return;
           }
+          blurActiveTarget();
           state.sheets = [makeSheet(0), makeSheet(1), makeSheet(2)];
           state.currentSheetIndex = 2;
-          blurActiveTarget();
           renderSheet();
           resetClearStage();
           scheduleSave();
